alternc (1.1+nmu6) stable; urgency=low

  * Squirrelmail plugin is now fully functionnal, including the changepass and filter plugins. it's using a specific MySQL account to change the password.

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Tue, 16 Oct 2012 17:25:07 +0200

alternc (1.1+nmu5) stable; urgency=low

  * Modification in alternc package config script.
    * Order of questions changed
    * Check the public IP address according to RFC 1918
    * checking SQL connectivity ( different procedure for local and remote server )

 -- squidly <squidly@nnx.com>  Tue, 19 Sep 2012 13:47:47 +0200

alternc (1.1+nmu4) stable; urgency=low

  * SQL Modification
    * MySQL tables used for Alternc users databases modified (mysql.sql)
    * Adding a special phpmyadmin user.
    * Users can now create databases en databases users independently
      ( no need to create a first database to create a user anymore)
  * Bugfixes in installation process
  * Kick off register_globals

 -- squidly <squidly@nnx.com>  Tue, 14 Aug 2012 11:21:14 +0200

alternc (1.1+nmu3) stable; urgency=low

  * Templating full configuration of postfix & dovecot
  * bugfixes in mysql database configuration
  * adding default quota (to use with dovecot) in local mailbox creation

 -- Squidly <squidly@nnx.com>  Wed, 02 May 2012 14:51:49 +0200

alternc (1.1+nmu2) stable; urgency=low

  * Templating of dovecot and postfix
    adding a view for dovecot usage (dovecot_view)
    adding of user vmail dedicated to the mail system
  * Bugfixes

 -- Squidly <squidly@nnx.com>  Sat, 03 Mar 2012 13:09:06 +0100

alternc (1.1+nmu1) stable; urgency=low

  * Dev in progres.
  * New class: m_export allowing account exporting given it's iud and a path : http://www.alternc.org/wiki/AlterncExport
  * Adding script export_account.php usind the above class to export an account. 
  * Bugfixes: quota's scripts udpated ( mostly concerning LVM partitions), and lots of others (permissions, browser ...)
