@@ -412,6 +412,7 @@ debian/alternc-awstats.lintian-override -text
 debian/alternc-awstats.postinst -text
 debian/alternc-awstats.postrm -text
 debian/alternc-awstats.preinst -text
+debian/alternc-roundcube.dirs -text
 debian/alternc-slave.config -text
 debian/alternc-slave.dirs -text
 debian/alternc-slave.install -text
@@ -548,6 +549,7 @@ roundcube/Makefile -text
 roundcube/class/m_roundcube.php -text
 roundcube/roundcube-install -text
 roundcube/templates/apache2/roundcube.conf -text
+roundcube/templates/roundcube/main.inc.php -text
 selenium/20120826-alternc-panel-testsuite.html -text
 selenium/README -text
 selenium/alternc.domain-local-mail-tld.html -text
