@@ -1,0 +1,6 @@
+etc/alternc
+etc/alternc/templates/roundcube
+etc/alternc/templates/apache2
+etc/roundcube
+usr/lib/alternc/install.d
+var/alternc/bureau/class
