@@ -1,7 +1,6 @@
 etc/alternc
 etc/alternc/templates/squirrelmail
 etc/alternc/templates/apache2
-etc/alternc/templates/javascript-common
 etc/squirrelmail
 usr/lib/alternc/install.d
 var/alternc/bureau/class
