@@ -99,6 +99,9 @@ install: build
 	# alternc-squirrelmail:
 	(cd squirrelmail && $(MAKE) install DESTDIR=$(CURDIR)/debian/alternc-squirrelmail)
 
+	# alternc-roundcube:
+	(cd roundcube && $(MAKE) install DESTDIR=$(CURDIR)/debian/alternc-roundcube)
+
 	# alternc-upnp
 	(cd upnp && $(MAKE) install DESTDIR=$(CURDIR)/debian/alternc-upnp)
 
